--- a/schoolApp/templates/schoolApp/certification.html
+++ b/schoolApp/templates/schoolApp/certification.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Certification - EduForAll</title>
@@ -30,10 +31,11 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 </head>
+
 <body>
     {% include 'navbar.html' %}
     <div class="container my-5">
-        <div class="display-6">Certification Page - EduForAll</div>
+        <div class="display-6"></div>
     </div>
     <div class="container-xxl py-5">
         <div class="container">
@@ -45,67 +47,55 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/certification-1.jpg' %}" alt="">
+                            <img class="img-fluid"
+                                src="https://media.istockphoto.com/id/2241345397/photo/businessman-working-on-laptop-with-digital-certification-icon-concept-of-quality-assurance.jpg?s=612x612&w=0&k=20&c=b5qPZmuI4xChMpzSY8YbXn7Nc3ME3FpYKtQzyqfumjw="
+                                alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
-                            <div class="bg-light d-flex justify-content-center pt-2 px-3">
-                                <a class="btn btn-sm    square btn-primary mx-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-instagram"></i></a>
-                            </div>
+
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">Certification Title 1</h3>
-                            <p>Brief description of Certification 1.</p>
+                            <h3 class="mb-0">Full Stack Development Certification</h3>
+                            <p>Achievement for completing fullstack development course</p>
                         </div>
                     </div>
-                </div>  
+                </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="course-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/certification-2.jpg' %}" alt="">
+                            <img class="img-fluid"
+                                src="https://media.istockphoto.com/id/2227482375/photo/hand-using-stylus-on-tablet-with-quality-check-seal-overlay-digital-certification-concept.jpg?s=612x612&w=0&k=20&c=5wwXUZOKJqbxvgtM8xOCnpI2-zSTulEZ5vhBY2WH-Fg="
+                                alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
-                            <div class="bg-light d-flex justify-content-center pt-2 px-3">
-                                <a class="btn btn-sm
-    square btn-primary mx-1" href=""><i
-                                            class="fab fa-facebook-f"></i></a>  
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-instagram"></i></a>   
-                            </div>
+
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">Certification Title 2</h3>
-                            <p>Brief description of Certification 2.</p>
+                            <h3 class="mb-0">Cyber Security Certification</h3>
+                            <p>Achievement for completing cyber security course</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data    -wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data -wow-delay="0.5s">
                     <div class="course-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/certification-3.jpg' %}" alt="">
+                            <img class="img-fluid"
+                                src="https://media.istockphoto.com/id/2214346054/photo/digital-certification-badge-with-glowing-icons-and-technology-elements-on-a-dark-abstract.jpg?s=612x612&w=0&k=20&c=bx0U54etvm2a9pfEKj6pMYQ5h7FXNujKl9nuGhrG5ow="
+                                alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
-                            <div class="bg-light d-flex justify-content-center pt-2 px-3">
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>  
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-instagram"></i></a>       
-                            </div>
+
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">Certification Title 3</h3>
-                            <p>Brief description of Certification 3.</p>
+                            <h3 class="mb-0">Cloud Computing course</h3>
+                            <p>Achievement for completing cloud computing course</p>
                         </div>
                     </div>
                 </div>
-            </div>  
+            </div>
         </div>
     </div>
     {% include 'footer.html' %}
 </body>
+
 </html>
