--- a/schoolApp/templates/schoolApp/class.html
+++ b/schoolApp/templates/schoolApp/class.html
@@ -34,7 +34,7 @@
 <body>
     {% include 'navbar.html' %}
     <div class="container my-5">
-        <div class="display-6">Classes Page - EduForAll</div>
+        <div class="display-6"></div>
     </div>
     <div class="container-xxl py-5">
         <div class="container">
@@ -49,18 +49,12 @@
                             <img class="img-fluid" src="{% static 'img/course-1.jpg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
-                            <div class="bg-light d-flex justify-content-center pt-2 px-3">
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-instagram"></i></a>
-                            </div>
+
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">Web Design</h3>
-                            <div class="mb-3">By John Doe</div>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <h3 class="mb-0">Web Development</h3>
+                            <div class="mb-3">By Maxwell Gogo</div>
+                            <p>Want to know how the web works , this for you</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <small class="me-3"><i class="fa fa-user text-primary"></i> 30 Students</small>
                                 <small class="me-3"><i class="fa fa-clock text-primary"></i> 6 Weeks</small>
@@ -80,19 +74,12 @@
                             <img class="img-fluid" src="{% static 'img/course-2.jpg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
-                            <div class="bg-light d-flex justify-content-center pt-2 px-3">
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-sm    -square btn-primary mx-1" href=""><i
-                                        class="fab fa-twitter"></i></a>
-                                <a class="btn btn-sm       -square btn-primary mx-1" href=""><i
-                                        class="fab fa-instagram"></i></a>
-                            </div>
+
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">Graphic Design</h3>
-                            <div class="mb-3">By Jane Smith</div>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <h3 class="mb-0">Cloud Computing</h3>
+                            <div class="mb-3">Joan Mukura</div>
+                            <p>Want to know how the cloud works , this for you</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <small class="me-3"><i class="fa fa-user text-primary"></i> 25 Students</small>
                                 <small class="me-3"><i class="fa fa-clock text-primary"></i> 8 Weeks</small>
