--- a/schoolApp/templates/schoolApp/instructor.html
+++ b/schoolApp/templates/schoolApp/instructor.html
@@ -34,7 +34,7 @@
 <body>
     {% include 'navbar.html' %}
     <div class="container my-5">
-        <div class="display-6">Instructor Page - EduForAll</div>
+        <div class="display-6"></div>
     </div>
     <div class="container-xxl py-5">
         <div class="container">
@@ -46,7 +46,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/team-1.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'img\instructor2.svg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -66,7 +66,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/team-2.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'img\instructors1.svg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -86,7 +86,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/team-3.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'img\instructor2.svg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -106,7 +106,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/team-4.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'img\instructors1.svg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
