--- a/templates/index.html
+++ b/templates/index.html
@@ -54,15 +54,16 @@
 
 
     <!-- Carousel Start -->
-    <section id="index.html">
+     <section id="index.html" class="h-75" >
         <div class="container-fluid p-0 mb-5 ">
             <div class="owl-carousel header-carousel position-relative">
                 <div class="owl-carousel-item position-relative">
                     <!-- <img class="img-fluid" src="{% static 'img/carousel-1.jpg' %}" alt=""> -->
-                    <img class="img-fluid carousel-img"
+                    <img class="img-fluid carousel-img " 
+                   
                         src="https://media.istockphoto.com/id/1770759657/photo/black-and-mixed-race-student-using-digital-tablets-in-mathematics-class.jpg?s=612x612&w=0&k=20&c=DtKYKp2GhW69-0Hf7bTpe0uvgXoA00hgfwDnFrlQ3Xs="
                         alt="">
-                    <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
+                    <div class="position-absolute top-0 start-0 w-100 h-75 d-flex align-items-center"
                         style="background: rgba(24, 29, 56, .7);">
                         <div class="container">
                             <div class="row justify-content-start">
