--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,8 @@
 
 
     <!-- Carousel Start -->
-     <section id="index.html" class="h-75" >
+    <section id="index.html" class="" >
+        <!-- <a href="{% url 'readmore' %}"></a> -->
         <div class="container-fluid p-0 mb-5 ">
             <div class="owl-carousel header-carousel position-relative">
                 <div class="owl-carousel-item position-relative">
@@ -63,7 +64,7 @@
                    
                         src="https://media.istockphoto.com/id/1770759657/photo/black-and-mixed-race-student-using-digital-tablets-in-mathematics-class.jpg?s=612x612&w=0&k=20&c=DtKYKp2GhW69-0Hf7bTpe0uvgXoA00hgfwDnFrlQ3Xs="
                         alt="">
-                    <div class="position-absolute top-0 start-0 w-100 h-75 d-flex align-items-center"
+                    <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
                         style="background: rgba(24, 29, 56, .7);">
                         <div class="container">
                             <div class="row justify-content-start">
@@ -74,8 +75,8 @@
                                         for Everyone
                                     </h3>
                                     <p class="fs-5 text-white mb-4 pb-2">EduForAll is a digital portal dedicated to
-                                        providing accessible, inclusive, and high-quality educational resources for
-                                        learners, educators, and communities across Kenya and beyond.</p>
+                                        providing accessible and high-quality educational resources for
+                                        learners and educators across Kenya and beyond.</p>
                                     <a href="{% url 'readmore' %}"
                                         class="btn btn-dark py-md-3 px-md-5 me-3 animated slideInLeft rounded-3">Read
                                         More</a>
@@ -401,7 +402,7 @@
                         </div>
                     </div>
                 </div>
-
+               
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
@@ -494,6 +495,12 @@
                                 </div>
                             </div>
                         </div>
+
+                        
+
+
+
+
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                             <div class="team-item bg-light">
                                 <div class="overflow-hidden">
