--- a/schoolApp/templates/schoolApp/books.html
+++ b/schoolApp/templates/schoolApp/books.html
@@ -32,7 +32,7 @@
 <body>
     {% include 'navbar.html' %}
     <div class="container my-5">
-        <div class="display-6">Books Page - EduForAll</div>
+        <div class="display-6"></div>
     </div>
     <div class="container-xxl py-5">
         <div class="container">
@@ -47,13 +47,7 @@
                             <img class="img-fluid" src="{% static 'img/book-1.jpg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
-                            <div class="bg-light d-flex justify-content-center pt-2 px-3">
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-sm-square btn-primary mx-1" href=""><i
-                                        class="fab fa-instagram"></i></a>   
-                            </div>
+                        
                         </div>  
                         <div class="text-center p-4">
                             <h3 class="mb-0">Book Title 1</h3>
