Updated homepage and students accounts

--- a/schoolApp/templates/schoolApp/mentor_course_list.html
+++ b/schoolApp/templates/schoolApp/mentor_course_list.html
@@ -58,7 +58,7 @@
         }
 
         .btn-new-course:hover {
-            background: #20c997;
+            background: #0e1b63;
             color: white;
             transform: translateY(-2px);
         }
