--- a/schoolApp/templates/schoolApp/readmore.html
+++ b/schoolApp/templates/schoolApp/readmore.html
@@ -190,7 +190,8 @@
             </div>
         </div>
         <div class="container my-5 text-center">
-            <a href="{% url 'school' %}" class="back-link text-dark"><i class="fas fa-arrow-left"></i> Back to Home</a>
+            <a href="{% url 'school' %}" class="back-link text-dark"><i class="fas fa-arrow-left"></i> Back to Home</a><br><br>
+            <a href="{% url 'login' %}" class="back-link text-dark"><i class="fas fa-arrow-right"></i>Start Learning</a>
 
         </div>
 
