--- a/templates/footer.html
+++ b/templates/footer.html
@@ -29,22 +29,22 @@
                 <h4 class="text-white mb-3">Gallery</h4>
                 <div class="row g-2 pt-2">
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{% static 'img/course-1.jpg' %}" alt="">
+                        <img class="img-fluid bg-light p-1" src="https://media.gettyimages.com/id/1770728228/photo/girl-student-learning-to-use-desktop-pc-at-computer-class-in-school.jpg?s=612x612&w=0&k=20&c=xtbriIWTMSgrTvZ7FhjK144A4O6Yv8Tp12Ez2VxFzrM=" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{% static 'img/course-2.jpg' %}" alt="">
+                        <img class="img-fluid bg-light p-1" src="https://media.gettyimages.com/id/1171003985/photo/male-teacher-explaining-female-student-at-desk.jpg?s=612x612&w=0&k=20&c=XJaMZF-h-mpr8_DkCCZ5NIAeXQh9t6aQjYDKGJc4hXg=" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{% static 'img/course-3.jpg' %}" alt="">
+                        <img class="img-fluid bg-light p-1" src="https://media.gettyimages.com/id/2148731713/photo/happy-teenage-girl-using-smart-phone-while-sitting-with-friends.jpg?s=612x612&w=0&k=20&c=ZcF7YB6YqaMU7sJvqwd9p63kxg2Il75aQRlj9pdm0XY=" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{% static 'img/course-2.jpg' %}" alt="">
+                        <img class="img-fluid bg-light p-1" src="https://media.gettyimages.com/id/1171003985/photo/male-teacher-explaining-female-student-at-desk.jpg?s=612x612&w=0&k=20&c=XJaMZF-h-mpr8_DkCCZ5NIAeXQh9t6aQjYDKGJc4hXg=" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{% static 'img/course-3.jpg' %}" alt="">
+                        <img class="img-fluid bg-light p-1" src="https://media.gettyimages.com/id/547014185/photo/students-in-the-computer-science-class-cape-town-south-africa.jpg?s=612x612&w=0&k=20&c=skBKA4HeV9UFJi0U_sk586Z8wyUkDkFEPqtCtoMye84=" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{% static 'img/course-1.jpg' %}" alt="">
+                        <img class="img-fluid bg-light p-1" src="https://media.gettyimages.com/id/2187877058/photo/teacher-girl-and-laptop-for-e-learning-in-library-with-education-support-information-and.jpg?s=612x612&w=0&k=20&c=nn4I4J60cM7W_2PNQsKFQxunuGOl0MmrWfA1OaCfK2E=" alt="">
                     </div>
                 </div>
             </div>
