--- a/schoolApp/templates/schoolApp/learning_center.html
+++ b/schoolApp/templates/schoolApp/learning_center.html
@@ -312,7 +312,7 @@
                         <i class="fas fa-book-open me-2"></i>Browse Courses
                     </a>
                     {% else %}
-                    <a href="#" class="btn-action btn-primary-action">
+                    <a href="" class="btn-action btn-primary-action">
                         <i class="fas fa-plus me-2"></i>Create Course
                     </a>
                     {% endif %}
