--- a/templates/index.html
+++ b/templates/index.html
@@ -54,14 +54,13 @@
 
 
     <!-- Carousel Start -->
-    <section id="index.html" class="" >
+    <section id="index.html" class="">
         <!-- <a href="{% url 'readmore' %}"></a> -->
         <div class="container-fluid p-0 mb-5 ">
             <div class="owl-carousel header-carousel position-relative">
                 <div class="owl-carousel-item position-relative">
                     <!-- <img class="img-fluid" src="{% static 'img/carousel-1.jpg' %}" alt=""> -->
-                    <img class="img-fluid carousel-img " 
-                   
+                    <img class="img-fluid carousel-img "
                         src="https://media.istockphoto.com/id/1770759657/photo/black-and-mixed-race-student-using-digital-tablets-in-mathematics-class.jpg?s=612x612&w=0&k=20&c=DtKYKp2GhW69-0Hf7bTpe0uvgXoA00hgfwDnFrlQ3Xs="
                         alt="">
                     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
@@ -140,7 +139,9 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-graduation-cap text-dark mb-4 "></i>
                             <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <p>Learning is guided by passionate and highly skilled instructors who bring
+                                real‑world experience.
+                            </p>
                         </div>
                         <a href="{% url 'instructor' %}"
                             class="btn btn-dark py-md-3 px-md-5 me-3 mb-3 animated slideInLeft rounded-3">View
@@ -153,7 +154,8 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-globe text-dark mb-4"></i>
                             <h5 class="mb-3">Online Classes</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <p>Our online classes give every learner the freedom to study anytime, anywhere, without
+                                sacrificing quality.</p>
                         </div>
                         <a href="{% url 'classes' %}"
                             class="btn btn-dark py-md-3 px-md-5 me-3 mb-3 animated slideInLeft rounded-3">View
@@ -165,7 +167,8 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-home text-dark mb-4"></i>
                             <h5 class="mb-3">Certifications</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <p>Our learners receives a digital certificate that validates their
+                                effort, skills, and commitment to growth.</p>
                         </div>
                         <a href="{% url 'certificate' %}"
                             class="btn btn-dark py-md-3 px-md-5 me-3 mb-3 animated slideInLeft rounded-3">View
@@ -177,7 +180,8 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-book-open text-dark mb-4"></i>
                             <h5 class="mb-3">Book Library</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <p>Our Library gives every learner access to a rich collection of books, notes, and
+                                learning materials.</p>
                         </div>
                         <a href="{% url 'books' %}"
                             class="btn btn-dark py-md-3 px-md-5 me-3 mb-3 animated slideInLeft rounded-3">View
@@ -402,7 +406,7 @@
                         </div>
                     </div>
                 </div>
-               
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
@@ -496,7 +500,7 @@
                             </div>
                         </div>
 
-                        
+
 
 
 
