--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                         src="https://media.istockphoto.com/id/1770759657/photo/black-and-mixed-race-student-using-digital-tablets-in-mathematics-class.jpg?s=612x612&w=0&k=20&c=DtKYKp2GhW69-0Hf7bTpe0uvgXoA00hgfwDnFrlQ3Xs="
                         alt="">
                     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
-                        style="background: rgba(24, 29, 56, .7);">
+                        style="background: rgba(12, 20, 57, 0.7);">
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-sm-10 col-lg-8">
@@ -595,10 +595,10 @@
                             </div>
                         </div>
                         <div class="testimonial-item text-center">
-                            <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img\student4.svg' %}"
+                            <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img\testimonial-1.jpg' %}"
                                 style="width: 80px; height: 80px;">
                             <h5 class="mb-0">Merittah Hannah</h5>
-                            <p>Web Development Student</p>
+                            <p>Web Development Learner</p>
                             <div class="testimonial-text bg-light text-center p-4">
                                 <p class="mb-0">Learning here wasn’t just about skills—it was about belonging. The peer
                                     discussions and group projects taught me teamwork and leadership.”</p>
