--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-light shadow sticky-top p-0">
     <a href="/" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-        <h2 class="m-0 text-info"><i class="fa fa-book me-3"></i>EduForAll</h2>
+        <h2 class="m-0 text-info"><i class="fa-school + fa-handshake me-3"></i>EduForAll</h2>
     </a>
+    <!-- <i class="fa fa-book me-3"></i> -->
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -69,7 +70,7 @@
 
         <!-- Mobile login button -->
         <div class="d-lg-none p-2 w-100">
-            <a href="{% url 'login' %}" class="btn btn-primary w-100">Join Now</a>
+            <a href="{% url 'login' %}" class="btn btn-info w-100">Join Now</a>
         </div>
         {% endif %}
     </div>
